fixed the alignment of the learn more button on the home page

--- a/src/index.css
+++ b/src/index.css
@@ -2817,10 +2817,8 @@ p:nth-of-type(3) {
   }
 
   .know-more-content {
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    gap: 2rem;
+    align-self: center;
+    gap: 0;
   }
 
   .know-more-text {
@@ -2832,9 +2830,11 @@ p:nth-of-type(3) {
   }
 
   .know-more-btn {
-    width: 60% !important;
+    width: 100% !important;
     font-size: 20px !important;
     height: 50px !important;
+    gap: 0.5rem !important;
+    padding: 0.7rem;
   }
 
   .service-container {
